Updated tech talk

--- a/presentations/beyond-the-linter/index.html
+++ b/presentations/beyond-the-linter/index.html
@@ -27,20 +27,6 @@
   </head>
 
   <body>
-    <div
-      id="work-in-progress"
-      style="
-        width: 100%;
-        text-align: center;
-        padding: 1rem 0;
-        background-color: #ffff00;
-        font-size: 2rem;
-        font-weight: bold;
-        position: absolute;
-      "
-      >WORK IN PROGRESS</div
-    >
-
     <div class="reveal">
       <div class="slides">
         <section>
@@ -54,487 +40,29 @@
           <p>October 15th, 2025</p>
         </section>
 
-        <!--
-          Rough Outline:
-            1. Introduction
-              - Agenda
-            2. The Importance of Code Quality, Standards, and Best Practices
-              - Why it matters
-              - How it impacts teams and projects
-              - Context of the `talkiatry-app` codebase
-            3. Wait, What is Code Quality and Why do I Care?
-              - Defining code quality
-              - Key metrics and indicators
-              - The role of code quality in software development
-            4. Level-Setting: What Linters Do
-              - Overview of linters
-              - Common misconceptions
-            5. Level-Setting: What Linters Don't Do
-              - Limitations of linters and static analysis tools
-              - Why they can't replace human judgment
-              - Why they are not enough, but still important
-            6. The Pillars of Enduring Code Quality
-              - Code readability and maintainability
-              - Consistency and standards
-              - Documentation and comments
-              - Testing and test coverage
-              - Refactoring and technical debt
-            7. Practical Strategies for Improving Code Quality
-              - Code reviews and pair programming
-              - Automated testing and CI/CD
-              - Refactoring practices
-              - Documentation best practices
-              - Continuous learning and improvement
-            8. Real-World War Stories & Lessons Learned
-              - Case studies from the `talkiatry-app` codebase
-              - Common pitfalls and how to avoid them
-              - Success stories and positive outcomes
-            9. Conclusion + Q&A
-              - Recap of key points
-                - Importance of ongoing commitment to code quality
-                - Open floor for questions and discussion
-        -->
+        <section>
+          <img data-src="./images/philip-j-fry-not-sure-if-bad-code-quality.webp" />
+        </section>
 
-        <!-- <section>
+        <section>
           <pre>
             <code class="language-html">
 &lt;a href="#"&gt;Link&lt;/a&gt;
             </code>
           </pre>
-        </section> -->
+        </section>
 
         <section>
-          <h2>Agenda</h2>
+          <h2>Fragments</h2>
 
           <br />
           <br />
 
           <ul>
-            <li>The Importance of Code Quality, Standards, and Best Practices</li>
-            <li>Level-Setting: What Linters Do, Don't Do, and Why We Should Care</li>
-            <li>The Pillars of Enduring Code Quality</li>
-            <li>Practical Strategies for Improving Code Quality</li>
-            <li>Real-World War Stories & Lessons Learned</li>
-            <li>Conclusion + Q&A</li>
+            <li class="fragment">First Fragment</li>
+            <li class="fragment">Second Fragment</li>
+            <li class="fragment">Third Fragment</li>
           </ul>
-        </section>
-
-        <section>
-          <section>
-            <h3>The Importance of Code Quality, Standards, and Best Practices</h3>
-
-            <br />
-            <br />
-
-            <ul>
-              <li>Why it matters</li>
-              <li>How it impacts teams and projects</li>
-              <li>Context of the <span class="blue">talkiatry-app</span> codebase</li>
-            </ul>
-          </section>
-
-          <section>
-            <h2>Why it matters</h2>
-
-            <br />
-            <br />
-
-            <ul>
-              <li>Improves maintainability and readability</li>
-              <li>Reduces bugs and technical debt</li>
-              <li>Enhances team collaboration and productivity</li>
-              <li>Supports long-term project success</li>
-            </ul>
-          </section>
-
-          <section>
-            <h2>How it impacts teams and projects</h2>
-
-            <br />
-            <br />
-
-            <ul>
-              <li>>Fosters a culture of quality and excellence</li>
-              <li>>Encourages knowledge sharing and mentorship</li>
-              <li>>Facilitates onboarding and ramp-up for new team members</li>
-              <li>>Enables better decision-making and prioritization</li>
-            </ul>
-          </section>
-
-          <section>
-            <h2>Context of the <span class="blue">talkiatry-app</span> codebase</h2>
-
-            <br />
-            <br />
-
-            <ul>
-              <li>A real-world example of a complex, evolving codebase</li>
-              <li>Challenges faced in maintaining code quality</li>
-              <li>Lessons learned from past experiences</li>
-            </ul>
-          </section>
-
-          <section>
-            <h2>Example 1</h2>
-
-            <br />
-            <br />
-
-            <ul>
-              <li>A critical bug caused by poor code quality</li>
-              <li>Impact on team morale and project timeline</li>
-              <li>Steps taken to resolve the issue</li>
-            </ul>
-          </section>
-        </section>
-
-        <section>
-          <section>
-            <h3>Level-Setting: What Linters Do, Don't Do, and Why We Should Care</h3>
-
-            <br />
-            <br />
-
-            <ul>
-              <li>Overview of linters</li>
-              <li>Common misconceptions</li>
-              <li>Limitations of linters and static analysis tools</li>
-              <li>Why they can't replace human judgment</li>
-              <li>Why they are not enough, but still important</li>
-            </ul>
-          </section>
-
-          <section>
-            <h2>Overview of linters</h2>
-
-            <br />
-            <br />
-
-            <ul>
-              <li>Automated tools that analyze code for potential errors and style issues</li>
-              <li>Help enforce coding standards and best practices</li>
-              <li>Examples: ESLint, Prettier, Pylint, RuboCop</li>
-            </ul>
-          </section>
-
-          <section>
-            <h2>Common misconceptions</h2>
-
-            <br />
-            <br />
-
-            <ul>
-              <li>Linters can catch all bugs and issues</li>
-              <li>Linters can replace code reviews and human judgment</li>
-              <li>Linters are a one-time setup and forget solution</li>
-            </ul>
-          </section>
-
-          <section>
-            <h2>Limitations of linters and static analysis tools</h2>
-
-            <br />
-            <br />
-
-            <ul>
-              <li>Cannot understand the context or intent of the code</li>
-              <li>May produce false positives or miss certain issues</li>
-              <li>Require regular updates and configuration to stay effective</li>
-            </ul>
-          </section>
-
-          <section>
-            <h2>Why they can't replace human judgment</h2>
-
-            <br />
-            <br />
-
-            <ul>
-              <li>Code quality is subjective and context-dependent</li>
-              <li>Human reviewers can provide insights and suggestions beyond syntax</li>
-              <li>Collaboration and communication are key to effective code quality</li>
-            </ul>
-          </section>
-
-          <section>
-            <h2>Why they are not enough, but still important</h2>
-
-            <br />
-            <br />
-
-            <ul>
-              <li>Linters are a valuable tool in the code quality toolbox</li>
-              <li>They can catch common issues and enforce standards</li>
-              <li>Should be used in conjunction with other practices like code reviews and testing</li>
-            </ul>
-          </section>
-        </section>
-
-        <section>
-          <section>
-            <h3>The Pillars of Enduring Code Quality</h3>
-
-            <br />
-            <br />
-
-            <ul>
-              <li>Code readability and maintainability</li>
-              <li>Consistency and standards</li>
-              <li>Documentation and comments</li>
-              <li>Testing and test coverage</li>
-              <li>Refactoring and technical debt</li>
-            </ul>
-          </section>
-
-          <section>
-            <h2>Code readability and maintainability</h2>
-
-            <br />
-            <br />
-
-            <ul>
-              <li>Write clear, concise, and self-explanatory code</li>
-              <li>Use meaningful variable and function names</li>
-              <li>Follow established coding conventions and styles</li>
-              <li>Aim for simplicity and avoid unnecessary complexity</li>
-            </ul>
-          </section>
-
-          <section>
-            <h2>Consistency and standards</h2>
-
-            <br />
-            <br />
-
-            <ul>
-              <li>Establish and adhere to coding standards and guidelines</li>
-              <li>Use linters and formatters to enforce consistency</li>
-              <li>Regularly review and update standards as needed</li>
-              <li>Encourage team-wide adoption and buy-in</li>
-            </ul>
-          </section>
-
-          <section>
-            <h2>Documentation and comments</h2>
-
-            <br />
-            <br />
-
-            <ul>
-              <li>Document code functionality, purpose, and usage</li>
-              <li>Use comments to explain complex or non-obvious code</li>
-              <li>Avoid redundant or outdated comments</li>
-              <li>Maintain up-to-date documentation as the code evolves</li>
-            </ul>
-          </section>
-
-          <section>
-            <h2>Testing and test coverage</h2>
-
-            <br />
-            <br />
-
-            <ul>
-              <li>Write automated tests to validate code functionality</li>
-              <li>Aim for high test coverage, but prioritize quality over quantity</li>
-              <li>Use a mix of unit, integration, and end-to-end tests</li>
-              <li>Regularly run tests as part of the development workflow (e.g., CI/CD)</li>
-            </ul>
-          </section>
-
-          <section>
-            <h2>Refactoring and technical debt</h2>
-
-            <br />
-            <br />
-
-            <ul>
-              <li>Regularly review and refactor code to improve quality</li>
-              <li>Address technical debt proactively to prevent accumulation</li>
-              <li>Prioritize refactoring efforts based on impact and risk</li>
-              <li>Encourage a culture of continuous improvement</li>
-            </ul>
-          </section>
-        </section>
-
-        <section>
-          <section>
-            <h3>Practical Strategies for Improving Code Quality</h3>
-
-            <br />
-            <br />
-
-            <ul>
-              <li>Code reviews and pair programming</li>
-              <li>Automated testing and CI/CD</li>
-              <li>Refactoring practices</li>
-              <li>Documentation best practices</li>
-              <li>Continuous learning and improvement</li>
-            </ul>
-          </section>
-
-          <section>
-            <h2>Code reviews and pair programming</h2>
-
-            <br />
-            <br />
-
-            <ul>
-              <li>Encourage regular code reviews to catch issues early</li>
-              <li>Foster a collaborative environment through pair programming</li>
-              <li>Provide constructive feedback and focus on learning</li>
-              <li>Use code reviews as an opportunity for knowledge sharing</li>
-            </ul>
-          </section>
-
-          <section>
-            <h2>Automated testing and CI/CD</h2>
-
-            <br />
-            <br />
-
-            <ul>
-              <li>Integrate automated testing into the development workflow</li>
-              <li>Use CI/CD pipelines to run tests and deploy code automatically</li>
-              <li>Monitor test results and address failures promptly</li>
-              <li>Continuously improve the testing suite based on feedback and coverage gaps</li>
-            </ul>
-          </section>
-
-          <section>
-            <h2>Refactoring practices</h2>
-
-            <br />
-            <br />
-
-            <ul>
-              <li>Incorporate refactoring into regular development tasks</li>
-              <li>Use techniques like code smells and design patterns to identify areas for improvement</li>
-              <li>Encourage a culture of refactoring and continuous improvement</li>
-            </ul>
-          </section>
-
-          <section>
-            <h2>Documentation best practices</h2>
-
-            <br />
-            <br />
-
-            <ul>
-              <li>Maintain clear and up-to-date documentation</li>
-              <li>Use tools like wikis, READMEs, and inline comments effectively</li>
-              <li>Encourage team members to contribute to documentation</li>
-              <li>Regularly review and update documentation as the code evolves</li>
-            </ul>
-          </section>
-
-          <section>
-            <h2>Continuous learning and improvement</h2>
-
-            <br />
-            <br />
-
-            <ul>
-              <li>Encourage team members to stay updated on best practices and industry trends</li>
-              <li>Foster a culture of learning through workshops, code katas, and knowledge sharing sessions</li>
-              <li>Regularly review and reflect on code quality practices and outcomes</li>
-              <li>Adapt and evolve strategies based on feedback and changing needs</li>
-            </ul>
-          </section>
-        </section>
-
-        <section>
-          <section>
-            <h3>Real-World War Stories & Lessons Learned</h3>
-
-            <br />
-            <br />
-
-            <ul>
-              <li>Case studies from the <span class="blue">talkiatry-app</span> codebase</li>
-              <li>Common pitfalls and how to avoid them</li>
-              <li>Success stories and positive outcomes</li>
-            </ul>
-          </section>
-
-          <section>
-            <h2>Case studies from the <span class="blue">talkiatry-app</span> codebase</h2>
-
-            <br />
-            <br />
-
-            <ul>
-              <li>Example 1: A critical bug caused by poor code quality</li>
-              <li>Example 2: Successful refactoring that improved maintainability</li>
-              <li>Example 3: Implementing automated testing to catch regressions</li>
-            </ul>
-          </section>
-
-          <section>
-            <h2>Common pitfalls and how to avoid them</h2>
-
-            <br />
-            <br />
-
-            <ul>
-              <li>Neglecting code reviews and relying solely on linters</li>
-              <li>Accumulating technical debt without addressing it</li>
-              <li>Lack of documentation leading to confusion and errors</li>
-              <li>Inadequate testing resulting in undetected bugs</li>
-            </ul>
-          </section>
-
-          <section>
-            <h2>Success stories and positive outcomes</h2>
-
-            <br />
-            <br />
-
-            <ul>
-              <li>Improved team collaboration and morale through code reviews</li>
-              <li>Reduced bugs and technical debt through regular refactoring</li>
-              <li>Enhanced code quality and maintainability through best practices</li>
-              <li>Successful project outcomes driven by a commitment to quality</li>
-            </ul>
-          </section>
-        </section>
-
-        <section>
-          <section>
-            <h2>Conclusion + Q&A</h2>
-
-            <br />
-            <br />
-
-            <div style="display: grid; grid-template-columns: 1fr 1fr">
-              <div style="align-self: center">
-                <ul>
-                  <li>How We Use PostgreSQL</li>
-                  <li>Pros and Cons of Our Current Approach</li>
-                  <li>Best Practices</li>
-                  <li>Recommended Next Steps</li>
-                  <li>Q&A</li>
-                </ul>
-              </div>
-
-              <div>
-                <img data-src="./images/philip-j-fry-not-sure-if-bad-code-quality.webp" width="400" />
-              </div>
-            </div>
-          </section>
-
-          <section>
-            <h2>Powered By</h2>
-
-            <br />
-            <br />
-
-            <ol>
-              <li>A single, static webpage.</li>
-              <li><a href="https://revealjs.com/" target="_blank">reveal.js</a></li>
-              <li><a href="https://highlightjs.org/" target="_blank">highlight.js</a></li>
-            </ol>
-          </section>
         </section>
       </div>
     </div>
