Refactoring the base-structure of the tech talk

--- a/presentations/beyond-the-linter/index.html
+++ b/presentations/beyond-the-linter/index.html
@@ -41,15 +41,43 @@
         </section>
 
         <section>
-          <img data-src="./images/philip-j-fry-not-sure-if-bad-code-quality.webp" />
+          <h2>Agenda</h2>
+
+          <br />
+          <br />
+
+          <div style="display: grid; grid-template-columns: 1fr 1fr">
+            <div style="align-self: center">
+              <ul>
+                <li><b>TODO: INSERT HERE</b></li>
+                <li>Conclusion + Q&A</li>
+              </ul>
+            </div>
+
+            <div>
+              <img data-src="./images/code-quality-measurement-wtfs-per-minute.png" width="400" />
+            </div>
+          </div>
         </section>
 
-        <section>
-          <pre>
+        <section
+          ><section>
+            <pre>
             <code class="language-html">
 &lt;a href="#"&gt;Link&lt;/a&gt;
             </code>
           </pre>
+          </section>
+
+          <section>
+            <pre>
+            <code class="language-ts">
+function add(a: number, b: number): number {
+  return a + b;
+}
+            </code>
+          </pre>
+          </section>
         </section>
 
         <section>
@@ -63,6 +91,41 @@
             <li class="fragment">Second Fragment</li>
             <li class="fragment">Third Fragment</li>
           </ul>
+        </section>
+
+        <section>
+          <section>
+            <h2>Conclusion + Q&A</h2>
+
+            <br />
+            <br />
+
+            <div style="display: grid; grid-template-columns: 1fr 1fr">
+              <div style="align-self: center">
+                <ul>
+                  <li><b>TODO: INSERT HERE</b></li>
+                  <li>Q&A</li>
+                </ul>
+              </div>
+
+              <div>
+                <img data-src="./images/philip-j-fry-not-sure-if-bad-code-quality.webp" width="400" />
+              </div>
+            </div>
+          </section>
+
+          <section>
+            <h2>Powered By</h2>
+
+            <br />
+            <br />
+
+            <ol>
+              <li>A single, static webpage.</li>
+              <li><a href="https://revealjs.com/" target="_blank">reveal.js</a></li>
+              <li><a href="https://highlightjs.org/" target="_blank">highlight.js</a></li>
+            </ol>
+          </section>
         </section>
       </div>
     </div>
