Added full skeleton (initial iteration) for the presentation

--- a/presentations/beyond-the-linter/index.html
+++ b/presentations/beyond-the-linter/index.html
@@ -41,56 +41,141 @@
         </section>
 
         <section>
-          <h2>Agenda</h2>
+          <section>
+            <h2>Agenda</h2>
 
-          <br />
-          <br />
+            <br />
+            <br />
 
-          <div style="display: grid; grid-template-columns: 1fr 1fr">
-            <div style="align-self: center">
-              <ul>
-                <li><b>TODO: INSERT HERE</b></li>
-                <li>Conclusion + Q&A</li>
-              </ul>
+            <div style="display: grid; grid-template-columns: 2fr 1fr">
+              <div style="align-self: center">
+                <ul>
+                  <li>Linter's Limits & Spell-Checker Analogy</li>
+                  <li>Writability Trap & Cost of Speed</li>
+                  <li>Jenga Codebase</li>
+                  <li>Three Pillars of Enduring Code</li>
+                  <li>Conclusion + Q&A</li>
+                </ul>
+              </div>
+
+              <div>
+                <img data-src="./images/code-quality-measurement-wtfs-per-minute.png" width="300" />
+              </div>
             </div>
-
-            <div>
-              <img data-src="./images/code-quality-measurement-wtfs-per-minute.png" width="400" />
-            </div>
-          </div>
-        </section>
-
-        <section
-          ><section>
-            <pre>
-            <code class="language-html">
-&lt;a href="#"&gt;Link&lt;/a&gt;
-            </code>
-          </pre>
           </section>
 
           <section>
-            <pre>
-            <code class="language-ts">
-function add(a: number, b: number): number {
-  return a + b;
-}
-            </code>
-          </pre>
+            <h2>Note</h2>
+
+            <br />
+            <br />
+
+            <h4>
+              This presentation revolves around our engineering organization's dominant use of
+              <span class="blue">TypeScript</span>; however, most (if not all) of the underlying information is true for
+              any programming language.
+            </h4>
           </section>
         </section>
 
         <section>
-          <h2>Fragments</h2>
+          <section>
+            <h2>The Linter's Limits</h2>
+          </section>
 
-          <br />
-          <br />
+          <section>
+            <h2>"Linter-Approved" Code</h2>
+          </section>
 
-          <ul>
-            <li class="fragment">First Fragment</li>
-            <li class="fragment">Second Fragment</li>
-            <li class="fragment">Third Fragment</li>
-          </ul>
+          <section>
+            <h2>The "Green Checkmark" Takeaway</h2>
+          </section>
+        </section>
+
+        <section>
+          <section>
+            <h2>The Spell-Checker Analogy</h2>
+          </section>
+
+          <section>
+            <h2>The Analogy Explained</h2>
+          </section>
+        </section>
+
+        <section>
+          <section>
+            <h2>The "Writability" Trap</h2>
+          </section>
+
+          <section>
+            <h2>The "Now vs. Later" Mindset</h2>
+          </section>
+        </section>
+
+        <section>
+          <section>
+            <h2>The Cost of Speed</h2>
+          </section>
+
+          <section>
+            <h2>A Real-World "Before" Example</h2>
+          </section>
+
+          <section>
+            <h2>A Real-World "After" Example</h2>
+          </section>
+        </section>
+
+        <section>
+          <section>
+            <h2>The "Jenga" Codebase</h2>
+          </section>
+
+          <section>
+            <h2>The Inevitable Collapse</h2>
+          </section>
+        </section>
+
+        <section>
+          <section>
+            <h2>The Three Pillars of Enduring Code</h2>
+          </section>
+        </section>
+
+        <section>
+          <section>
+            <h2>Readability is a Feature</h2>
+          </section>
+
+          <section>
+            <h2>Renaming for Clarity</h2>
+          </section>
+        </section>
+
+        <section>
+          <section>
+            <h2>Maintainability</h2>
+          </section>
+
+          <section>
+            <h2>Single Responsibility Principle</h2>
+          </section>
+
+          <section>
+            <h2>Refactoring</h2>
+
+            <!-- SOLID? -->
+          </section>
+        </section>
+
+        <section>
+          <section>
+            <h2>Testability</h2>
+          </section>
+
+          <section>
+            <h2>Dependency Injection</h2>
+          </section>
         </section>
 
         <section>
@@ -100,16 +185,19 @@ function add(a: number, b: number): number {
             <br />
             <br />
 
-            <div style="display: grid; grid-template-columns: 1fr 1fr">
+            <div style="display: grid; grid-template-columns: 2fr 1fr">
               <div style="align-self: center">
                 <ul>
-                  <li><b>TODO: INSERT HERE</b></li>
+                  <li>Linter's Limits & Spell-Checker Analogy</li>
+                  <li>Writability Trap & Cost of Speed</li>
+                  <li>Jenga Codebase</li>
+                  <li>Three Pillars of Enduring Code</li>
                   <li>Q&A</li>
                 </ul>
               </div>
 
               <div>
-                <img data-src="./images/philip-j-fry-not-sure-if-bad-code-quality.webp" width="400" />
+                <img data-src="./images/philip-j-fry-not-sure-if-bad-code-quality.webp" width="300" />
               </div>
             </div>
           </section>
