--- a/presentations/beyond-the-linter/index.html
+++ b/presentations/beyond-the-linter/index.html
@@ -71,110 +71,10 @@
             <br />
 
             <h4>
-              This presentation revolves around our engineering organization's dominant use of
-              <span class="blue">TypeScript</span>; however, most (if not all) of the underlying information is true for
-              any programming language.
+              This presentation revolves around the application engineering's dominant use of
+              <span class="blue">TypeScript</span>; however, most (if not all) of the underlying information is
+              applicable to any programming language.
             </h4>
-          </section>
-        </section>
-
-        <section>
-          <section>
-            <h2>The Linter's Limits</h2>
-          </section>
-
-          <section>
-            <h2>"Linter-Approved" Code</h2>
-          </section>
-
-          <section>
-            <h2>The "Green Checkmark" Takeaway</h2>
-          </section>
-        </section>
-
-        <section>
-          <section>
-            <h2>The Spell-Checker Analogy</h2>
-          </section>
-
-          <section>
-            <h2>The Analogy Explained</h2>
-          </section>
-        </section>
-
-        <section>
-          <section>
-            <h2>The "Writability" Trap</h2>
-          </section>
-
-          <section>
-            <h2>The "Now vs. Later" Mindset</h2>
-          </section>
-        </section>
-
-        <section>
-          <section>
-            <h2>The Cost of Speed</h2>
-          </section>
-
-          <section>
-            <h2>A Real-World "Before" Example</h2>
-          </section>
-
-          <section>
-            <h2>A Real-World "After" Example</h2>
-          </section>
-        </section>
-
-        <section>
-          <section>
-            <h2>The "Jenga" Codebase</h2>
-          </section>
-
-          <section>
-            <h2>The Inevitable Collapse</h2>
-          </section>
-        </section>
-
-        <section>
-          <section>
-            <h2>The Three Pillars of Enduring Code</h2>
-          </section>
-        </section>
-
-        <section>
-          <section>
-            <h2>Readability is a Feature</h2>
-          </section>
-
-          <section>
-            <h2>Renaming for Clarity</h2>
-          </section>
-        </section>
-
-        <section>
-          <section>
-            <h2>Maintainability</h2>
-          </section>
-
-          <section>
-            <h2>Single Responsibility Principle</h2>
-          </section>
-
-          <section>
-            <h2>Refactoring</h2>
-
-            <!-- SOLID? -->
-          </section>
-        </section>
-
-        <section>
-          <section>
-            <h2>Testability</h2>
-          </section>
-
-          <section>
-            <h2>Dependency Injection</h2>
           </section>
         </section>
 
